# routes/index.js
@@ -19,7 +19,7 @@ router.post('/add-note', projectSummaryController.addNote);
 router.get('/get-notes/:id', projectSummaryController.getNote);
 router.get('/latest-project-summary', projectSummaryController.loadLatestProjectSummary);
 router.delete('/snapshot', projectSummaryController.deleteSnapshot);
-
+router.post('/buffer', projectSummaryController.addBuffer);
 
 //**NO validation required */
 router.get('/all-projects', projectSummaryController.allProjects);
